# agentic-workflow

./: .gitignore  .npmignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md  README_CN.md  SKILL.md  mypy.ini  package.json  pyproject.toml  pytest.ini  quality_test_results.json  real_test_results.json  refining_report.md  requirements-dev.txt  requirements.txt  review_report.md  subagent_test_results.json
.self-improvement/: README.md  baseline_check.sh  record_result.sh  results.tsv  self_improve.sh  zones.md
agents/: README.md  backend_architect.md  coder.md  database_optimizer.md  debugger.md  devops_automator.md  frontend_developer.md  performance_expert.md  planner.md  researcher.md  reviewer.md  security_expert.md  technical_writer.md
configs/: proposal_verifier.toml
docs/: DEV_GUIDE.md  EXPERIMENTAL_GRADUATION.md  STATE_ARCHITECTURE.md  agent_teams_integration_design.md  alignment_plan.md  ecc_subagents_integration_design.md  execution_loop_multiagent_plan.md  self_improvement_program.md
evaluation_results/: COMPREHENSIVE_EVALUATION_REPORT.md  MULTI_ITERATION_EVALUATION.md  completion_analysis.md  quality_analysis.md  speed_analysis.md  token_analysis.md
hooks/: README.md  evaluate-session.sh  observe.sh
knowledge/: summary_20260410_agent_memory_research.md  summary_20260410_metaharness_evoskills.md
references/: builtin_e2e.md  builtin_tdd.md  ecc_integration.md  memory_architecture.md  memory_integration.md  novel_generation_workflow.md  pua_flavors.md  quick_ref.md
scripts/: README.md  __init__.py  adaptive_tier.py  agent_spawner.py  (+62 more)
(+219 files in other folders)
